fix(1.3.2): spotbugs
spotbugs